# distributed-audio-dsp

./: README.md  agents.md  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  docker-compose.yml  jest.config.ts  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20260203173902_init/: migration.sql
backend/prisma/migrations/20260331200000_add_audio_jobs/: migration.sql
backend/prisma/migrations/20260401000000_add_output_key/: migration.sql
backend/src/: app.module.ts  main.ts
backend/src/app/helpers/: generatePasswordHash.ts
backend/src/app/repositories/: audio-job-repository.ts  user-repository.ts
backend/src/app/storage/: audio-input-storage.ts
backend/src/app/use-cases/: find-audio-job-by-id.ts  find-user-by-email.spec.ts  find-user-by-email.ts  get-audio-output-file.ts  list-audio-jobs.ts  process-audio.spec.ts  process-audio.ts  register-user.spec.ts  register-user.ts
backend/test/repositories/: in-memory-audio-job-repository.ts  in-memory-user-repository.ts
web/: README.md  components.json  package-lock.json  package.json
web/src/: index.css  main.tsx
web/src/app/: router.tsx
web/src/layouts/: app-layout.tsx  public-layout.tsx
web/src/lib/: api.ts
web/src/pages/: library-page.tsx  login-page.tsx  not-found-page.tsx  process-page.tsx  register-page.tsx
worker/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
worker/src/: effects.rs  main.rs
worker/src/lib/: audio_processor.rs  cloudflare.rs  effects.rs  mod.rs  presigned_url.rs  storage.rs
(+39 files in other folders)
