[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
symphonia = { version = "0.5.5", features = ["mp3", "all-formats"] }
hound = "3.5.0"
lapin = "3.7.2"
indicatif = "0.17"
tokio = {version =  "1.49.0", features = ["full"]}
serde = "1.0.228"
serde_json = "1.0.149"
futures-lite = "2.6.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.119", features = ["behavior-version-latest"] }
dotenv = "0.15.0"
